test/expected/file-error.out
cdecl> cast x into
                  ^
data/cast_error.cdeclrc:1,12: syntax error: "as", "into", or "to" expected
cdecl> declare x int
                 ^
data/declare_int_error.cdeclrc:1,11: syntax error: "int": "as" expected ("int" is a keyword)
cdecl> explain int
                  ^
data/explain_int_error.cdeclrc:1,12: error: declaration expected
